--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
             --text: #2f3542;
             --bg: #f1f2f6;
             --card-bg: #ffffff;
+            --border: #dfe4ea;
+        }
+        [data-theme="dark"] {
+            --primary: #ff6b81;
+            --text: #e4e4e4;
+            --bg: #1e272e;
+            --card-bg: #2d3436;
+            --border: #57606f;
         }
         * { box-sizing: border-box; }
         body {
@@ -23,6 +31,29 @@
             min-height: 100vh;
             margin: 0;
             padding: 24px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .theme-toggle {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background: var(--card-bg);
+            border: 2px solid var(--border);
+            border-radius: 50%;
+            width: 48px;
+            height: 48px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            font-size: 1.4rem;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            transition: transform 0.2s, box-shadow 0.2s;
+            user-select: none;
+        }
+        .theme-toggle:hover {
+            transform: scale(1.1);
+            box-shadow: 0 6px 16px rgba(0,0,0,0.15);
         }
         h1 {
             color: var(--primary);
@@ -79,6 +110,7 @@
     </style>
 </head>
 <body>
+    <div class="theme-toggle" onclick="toggleTheme()" title="Toggle dark mode">🌙</div>
     <h1>🇯🇵 SQWease</h1>
     <p class="tagline">Japanese · vocab & conversation</p>
     <nav class="menu">
@@ -91,5 +123,21 @@
             <span class="hint">Conversation practice · sentence patterns</span>
         </a>
     </nav>
+    <script>
+        function toggleTheme() {
+            const html = document.documentElement;
+            const current = html.getAttribute('data-theme');
+            const next = current === 'dark' ? 'light' : 'dark';
+            html.setAttribute('data-theme', next);
+            localStorage.setItem('sqwease-theme', next);
+            document.querySelector('.theme-toggle').textContent = next === 'dark' ? '☀️' : '🌙';
+        }
+        // Load saved theme
+        const saved = localStorage.getItem('sqwease-theme');
+        if (saved) {
+            document.documentElement.setAttribute('data-theme', saved);
+            document.querySelector('.theme-toggle').textContent = saved === 'dark' ? '☀️' : '🌙';
+        }
+    </script>
 </body>
 </html>
