--- a/flashcards.html
+++ b/flashcards.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Japanese Flashcards · SQWease</title>
+    <script>
+    (function(){
+        var s = typeof localStorage !== 'undefined' ? localStorage.getItem('sqwease-theme') : null;
+        var theme = (s === 'dark' || s === 'light') ? s : 'light';
+        document.documentElement.setAttribute('data-theme', theme);
+    })();
+    </script>
     <style>
         :root {
             --primary: #ff4757;
@@ -57,6 +64,10 @@
             transform: scale(1.1);
             box-shadow: 0 6px 16px rgba(0,0,0,0.15);
         }
+        .theme-toggle .icon-dark { display: none; }
+        .theme-toggle .icon-light { display: inline; }
+        [data-theme="dark"] .theme-toggle .icon-dark { display: inline; }
+        [data-theme="dark"] .theme-toggle .icon-light { display: none; }
         .top-link { margin-bottom: 12px; }
         .top-link a { color: var(--primary); font-weight: 600; text-decoration: none; }
         .top-link a:hover { text-decoration: underline; }
@@ -135,7 +146,7 @@
     </style>
 </head>
 <body>
-    <div class="theme-toggle" onclick="toggleTheme()" title="Toggle dark mode">🌙</div>
+    <div class="theme-toggle" onclick="toggleTheme()" title="Toggle dark mode"><span class="icon-light">🌙</span><span class="icon-dark">☀️</span></div>
     <p class="top-link"><a href="index.html">← Menu</a></p>
     <h1>🇯🇵 Japanese 1500</h1>
     <div class="container" onclick="flipCard()">
@@ -241,14 +252,11 @@
             const next = current === 'dark' ? 'light' : 'dark';
             html.setAttribute('data-theme', next);
             localStorage.setItem('sqwease-theme', next);
-            document.querySelector('.theme-toggle').textContent = next === 'dark' ? '☀️' : '🌙';
+            // Icon updates via [data-theme] and CSS
         }
-        // Load saved theme
+        // Load saved theme (already applied in head; icon driven by CSS)
         const saved = localStorage.getItem('sqwease-theme');
-        if (saved) {
-            document.documentElement.setAttribute('data-theme', saved);
-            document.querySelector('.theme-toggle').textContent = saved === 'dark' ? '☀️' : '🌙';
-        }
+        if (saved) document.documentElement.setAttribute('data-theme', saved);
     </script>
 </body>
 </html>
