--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
     <nav class="menu">
         <a href="flashcards.html">
             <span class="title">Flashcards</span>
-            <span class="hint">Vocabulary · flip cards</span>
-            <span class="desc">1,500 high-frequency words. Flip to see romaji, definition, and example sentence.</span>
+            <span class="hint">1,500 high-frequency words</span>
+            <span class="desc">Flip to see romaji, definition, and example sentence.</span>
         </a>
         <a href="boxes.html" class="cups">
             <span class="title">1-2-3 Boxes</span>
-            <span class="hint">Conversation practice · sentence patterns</span>
-            <span class="desc">Statement → yes/no question → open question. Build real conversation habits.</span>
+            <span class="hint">Verbs with sentence patterns</span>
+            <span class="desc">Build real conversational habits with question and answer sets.</span>
         </a>
     </nav>
     <script>
