added more ui-examples, updated order of the fluency vocab so the grammar marks arent first, added kana charts, added a kanji section to the main menu, updated the roadmap

--- a/index.html
+++ b/index.html
@@ -110,6 +110,20 @@
         .menu a.cups:hover {
             box-shadow: 0 6px 16px rgba(46, 213, 115, 0.25);
         }
+        .menu a.kana-charts {
+            border-color: #5352ed;
+            color: #5352ed;
+        }
+        .menu a.kana-charts:hover {
+            box-shadow: 0 6px 16px rgba(83, 82, 237, 0.25);
+        }
+        .menu a.kanji {
+            border-color: #e67e22;
+            color: #d35400;
+        }
+        .menu a.kanji:hover {
+            box-shadow: 0 6px 16px rgba(230, 126, 34, 0.25);
+        }
         .menu .title {
             font-size: 1.1rem;
             font-weight: 700;
@@ -128,13 +142,16 @@
             .tagline { margin-bottom: 32px; }
             .menu {
                 flex-direction: row;
-                max-width: 720px;
+                flex-wrap: wrap;
+                max-width: 100%;
+                width: 100%;
                 gap: 24px;
                 justify-content: center;
             }
             .menu a {
-                flex: 1;
-                min-width: 280px;
+                flex: 1 1 auto;
+                min-width: 200px;
+                max-width: 320px;
                 padding: 24px 28px;
                 text-align: left;
             }
@@ -148,7 +165,7 @@
             }
             .menu .desc {
                 display: block;
-                font-size: 0.9rem;
+            font-size: 0.9rem;
                 color: #a4b0be;
                 font-weight: 400;
                 margin-top: 8px;
@@ -175,6 +192,16 @@
             <span class="title">1-2-3 Boxes</span>
             <span class="hint">Verbs with sentence patterns</span>
             <span class="desc">Build real conversational habits with question and answer sets.</span>
+        </a>
+        <a href="kana-charts.html" class="kana-charts">
+            <span class="title">Kana Charts</span>
+            <span class="hint">Hiragana & Katakana</span>
+            <span class="desc">Gojuon grid: vowels and consonants with romaji. Reference anytime.</span>
+        </a>
+        <a href="kanji.html" class="kanji">
+            <span class="title">Kanji</span>
+            <span class="hint">Characters & meanings</span>
+            <span class="desc">Add and study your own Kanji list. Build a personal reference.</span>
         </a>
     </nav>
     <script>
